--- a/Introducao.csproj
+++ b/Introducao.csproj
@@ -7,8 +7,14 @@
 
   <ItemGroup>
     <None Remove="Microsoft.Data.SqlClient" />
+    <None Remove="Dapper" />
+    <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
+    <PackageReference Include="Dapper" Version="2.0.123" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
